# nngeometry

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  Readme.md  e2cnn.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: nngeometry.yml  release.yml  snapshot.yml  test.yml
benchmark/: resnet.py  timings_resnet.py
derivations/: kfc.lyx  log_sigm.lyx
docs/: conf.py  index.rst  install.rst  overview.rst  pspace_repr.rst  quick_example.rst  refs.bib  requirements.txt
docs/api/: backends.rst  generators.rst  index.rst  (+5 more)
examples/: FIM for EWC.ipynb  FIM for continual learning.ipynb  Fisher Information Matrix.ipynb  GGN MNIST.ipynb  NNGeometry_Gram_matrix_example.ipynb  Timings and display of FIM representations.ipynb  readme.md  resnet.py
nngeometry/: __init__.py  empiricall2loss.py  gram.py  hessian.py  jacobian.py  layercollection.py  layers.py  map.py  maths.py  metrics.py  representations.py  solve.py  utils.py  vector.py
nngeometry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  subsampled_mnist.py  tasks.py  test_conv_switch.py  test_deprecation.py  test_dtypes.py  test_empiricall2loss.py  test_fim_backends.py  test_gram.py  test_hessian.py  test_jacobian.py  test_jacobian_ekfac.py  test_jacobian_kfac.py  test_l2loss.py  test_l2losskfac.py  test_layers.py  test_m2gradients.py  test_m2gradients_ekfac.py  test_m2gradients_kfac.py  test_maths.py  test_metrics.py  test_pickle.py  test_pmateye.py  test_pmatmixed.py  test_pspace_l2loss.py  test_representations.py  test_torch_hooks.py  test_torch_hooks_ekfac.py  test_torch_hooks_kfac.py  test_utils.py  test_vector.py  utils.py
tmp/: iss.py  iss2.py
(+33 files in other folders)
